--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "@material-tailwind/react": "^1.2.4",
+    "dotenv": "^16.0.3",
     "flowbite": "^1.6.3",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
